Fix canvas size and hide scrollbars

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body,p,canvas 	{	background: url('../space-2.png');
 					color: #fff;
 					margin: 0px;
-					padding: 0px
+					padding: 0px;
+					overflow: hidden
 				}
